[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
authors = [
    {name = 'Till Ehrengruber', email = 'till.ehrengruber@cscs.ch'},
]
dependencies = [
    "sqlalchemy >= 2.0.0",
    "click >= 8.0.0",
    "tabulate >= 0.9.0"
]
description = 'Repository containing performance data of icon exclaim. '
name = 'icon_exclaim_perf_tools'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>=3.10'
version = '0.0'